# MultiMaterialCSimplexMesh

./: README.md
src/: CMakeLists.txt  CSimplexMeshConverter.cpp  CSimplexMeshConverter.h  Deformation.cpp  Deformation.h  MMCSimplexSurf.cpp  MMCSimplexSurf.h  MultiMaterialDeformation.cpp  MultiMaterialDeformation.h  SimplexMesh.cpp  SimplexMesh.h  SimplexSurf.cpp  SimplexSurf.h  StdFunctions.cpp  StdFunctions.h  main.cpp
